--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 					<a href="#" class="nav-link">HOME</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">O MNIE</a>
+					<a href="index.html#about" class="nav-link">O MNIE</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">KONTAKT</a>
+					<a href="index.html#contact" class="nav-link">KONTAKT</a>
 				</li>
 			</ul>
 		</div>
@@ -81,37 +81,23 @@
 			<div class="carousel-caption">
 				<h2 class="display-3">Karolina Zielonka</h2>
 				<h3>UST student</h3>
-				<!--<button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
-				<button type="button" class="btn btn-primary btn-lg">Get Started</button>--> 
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="img/background.jpg" alt="">
+			<img src="img/background2.jpg" alt="">
 		</div>
 		<div class="carousel-item">
-			<img src="img/background.jpg" alt="">
+			<img src="img/background3.jpg" alt="">
 		</div>
 
 	</div>
 </div>
 
-<!--- Jumbotron 
-<div class="container-fluid">
-	<div class="row jumbotron">
-		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nostrum dicta cumque hic fugit doloribus maiores sapiente consequuntur tempore magni! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus delectus itaque aliquam sit, laborum iste quidem quas dolor atque dolorem.</p>
-		</div>
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">web hosting</button></a>
-		</div>
-	</div>
-</div> -->
-
 <!--- Welcome Section -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4"> Poznaj mnie bliżej</h1>
+			<h1 id="about" class="display-4"> Poznaj mnie bliżej</h1>
 			<hr>
 			<div class="col-12">
 				<p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus quas laudantium officiis, magnam commodi possimus inventore maxime dignissimos dicta optio illum tempora asperiores consequuntur facilis nobis in necessitatibus perspiciatis delectus.</p>
@@ -157,69 +143,25 @@
 	<div class="row padding">
 		<div class="col-md-12 col-lg-6">
 			<br>
-			<h2>Zainteresowania</h2>
+			<h2 class="text-center">Zainteresowania</h2>
 			<br>
-			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore laborum earum, saepe veritatis iste illo at omnis rerum dolores laudantium! Labore culpa quaerat autem beatae corporis unde explicabo, laudantium corrupti!</p>
+			<p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore laborum earum, saepe veritatis iste illo at omnis rerum dolores laudantium! Labore culpa quaerat autem beatae corporis unde explicabo, laudantium corrupti!</p>
 			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, aspernatur.</p>
 			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus consequatur! Amet possimus facere aut?</p>
 			<br>
-			<a href="" class="btn btn-primary">LEARN MORE</a>
 		</div>
 		<div class="col-lg-6">
-			<img src="img/me.JPG" class="img-thumbnail" alt="">
+			<img src="img/ja.jpg" class="img-thumbnail" alt="">
 		</div>
 	</div>
 </div>
 <hr class="my-4">
-<!--- Meet the team 
-<div class="container-fluid padding">
-	<div class="row welcome text-center">
-		<div class="col-12">
-			<h1 class=display-4>Meet me</h1>
-		</div>
-		<hr>
-	</div>
-</div>
 
-<div class="container-fluid padding">
-	<div class="row padding">
-		<div class="col-md-4">
-			<div class="card">
-				<img class='card-img-top' src="img/team1.png" alt="">
-				<div class="card-body">
-					<h4 class="card-title">JOHN DOE</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, dolorum!</p>
-					<a href="" class="btn btn-outline-secondary">See more</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="card">
-				<img class='card-img-top' src="img/team2.png" alt="">
-				<div class="card-body">
-					<h4 class="card-title">JOHN DOE</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, dolorum!</p>
-					<a href="" class="btn btn-outline-secondary">See more</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="card">
-				<img class='card-img-top' src="img/team3.png" alt="">
-				<div class="card-body">
-					<h4 class="card-title">JOHN DOE</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, dolorum!</p>
-					<a href="" class="btn btn-outline-secondary">See more</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>-->
 <!--- Connect -->
-<div class="container-fluid padding">
+<div id="contact" class="container-fluid padding">
 	<div class="row text-center padding">
 		<div class="col-12">
-			<h2>Conntact</h2>
+			<h2>KONTAKT</h2>
 		</div>
 		<div class="col-12 social padding">
 			<a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a>
