--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<h1 id="about" class="display-4"> Poznaj mnie bliżej</h1>
 			<hr>
 			<div class="col-12">
-				<p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus quas laudantium officiis, magnam commodi possimus inventore maxime dignissimos dicta optio illum tempora asperiores consequuntur facilis nobis in necessitatibus perspiciatis delectus.</p>
+				<p class="lead">Obecnie studentka Akademi Górniczo-Hutniczej w Krakowie na kierunku Informatyka Stosowana. Interesuję się Pythonem oraz Java Scriptem. W przyszłości chciałabym pracować w tych technologiach. </p>
 			</div>
 		</div>
 	</div>
@@ -113,23 +113,22 @@
 			<i class="fas fa-code"></i>
 			<i class="fab fa-css3"></i>
 			<h3>HTML5 & CSS</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam deleniti</p>
+			<p></p>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fab fa-python"></i>
 			<h3>PYTHON</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam deleniti</p>
+			<p></p>
 		</div>
 		<div class="col-sm-12 col-md-4">
 			<i class="fab fa-js"></i>
 			<h3>JAVA SCRIPT</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam deleniti</p>
+			<p></p>
 		</div>
 	</div>
 	<hr class="my-4">
 </div>
 
-<hr class="my-4">
 <!--- Fixed background -->
 <figure>
 	<div class="fixed-wrap">
@@ -139,18 +138,18 @@
 	</div>
 </figure>
 <!--- Two Column Section -->
-<div class="container-fluid padding">
+<div class="container padding">
 	<div class="row padding">
-		<div class="col-md-12 col-lg-6">
+		<div class="col-md-12 col-lg-8">
 			<br>
 			<h2 class="text-center">Zainteresowania</h2>
 			<br>
-			<p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore laborum earum, saepe veritatis iste illo at omnis rerum dolores laudantium! Labore culpa quaerat autem beatae corporis unde explicabo, laudantium corrupti!</p>
-			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, aspernatur.</p>
-			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, doloribus consequatur! Amet possimus facere aut?</p>
+			<p class="lead">Poza ciągła nauką nowych technologii informatycznych lubię spędzać czas aktywnie.</p>
+			<p>Moim ulubionymi aktywnościami jest jazda na rowerze, bieganie oraz zwiedzanie szlakó górskich.</p>
+			<p>Kiedy pogoda nie jest odpowiednia na aktywności na dworze lubię spędzać czas grając w gry multiplayer z moimi znajomymi.</p>
 			<br>
 		</div>
-		<div class="col-lg-6">
+		<div class="col-md-8 col-lg-4">
 			<img src="img/ja.jpg" class="img-thumbnail" alt="">
 		</div>
 	</div>
