Added particlesJS library.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <figure>
 	<div class="fixed-wrap">
 		<div id="fixed">
-
+			<div class="root" id="root" ></div>
 		</div>
 	</div>
 </figure>
@@ -208,6 +208,8 @@
 </footer>
 
 
+    <script src="./particles/particles.min.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
