fixed size of particles and correct text

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 			<h2 class="text-center">Zainteresowania</h2>
 			<br>
 			<p class="lead">Poza ciągła nauką nowych technologii informatycznych lubię spędzać czas aktywnie.</p>
-			<p>Moim ulubionymi aktywnościami jest jazda na rowerze, bieganie oraz zwiedzanie szlakó górskich.</p>
-			<p>Kiedy pogoda nie jest odpowiednia na aktywności na dworze lubię spędzać czas grając w gry multiplayer z moimi znajomymi.</p>
+			<p class="lead">Moim ulubionymi aktywnościami jest jazda na rowerze, bieganie oraz zwiedzanie szlaków górskich.</p>
+			<p class="lead">Kiedy pogoda nie jest odpowiednia na aktywności na dworze lubię spędzać czas grając w gry multiplayer z moimi znajomymi.</p>
 			<br>
 		</div>
 		<div class="col-md-8 col-lg-4">
@@ -207,9 +207,8 @@
 	</div>
 </footer>
 
-
-    <script src="./particles/particles.min.js"></script>
-    <script src="index.js"></script>
+<script src="./particles/particles.min.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
