Change logo animations.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
 </head>
 <body>
 
@@ -18,7 +17,8 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">
-			<svg width="340" height="99" viewBox="0 0 340 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<h1><span id="logo"></span></h1>
+			<!-- <svg width="340" height="99" viewBox="0 0 340 99" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<g id="Group 1">
 			<path id="second-bg" d="M51.5978 16.6938C118.916 -1.36403 103.077 52.8096 166.435 34.7517C229.794 16.6938 301.072 39.7678 301.072 39.7678C301.072 39.7678 396.11 87.922 289.193 76.8867C182.275 65.8514 91.1969 90.9317 51.5978 76.8867C11.9988 62.8417 -15.7207 34.7517 51.5978 16.6938Z" fill="url(#paint0_linear)"/>
 			<path id="first-bg" d="M44.2412 31.2779C106.702 22.7154 148.298 54.7112 202.553 33.0191C256.809 11.327 301.117 31.2779 301.117 31.2779C301.117 31.2779 372.511 62.1055 264.043 63.3881C155.574 64.6706 106.523 99.6893 63.2109 90.3859C19.8993 81.0825 -18.2197 39.8405 44.2412 31.2779Z" fill="url(#paint1_linear)"/>
@@ -47,7 +47,7 @@
 			<stop offset="1" stop-color="#A2DDFF" stop-opacity="0.71"/>
 			</linearGradient>
 			</defs>
-			</svg>
+			</svg> -->
 			</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
