Fixed size for small devices.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 			<h1><span id="logo"></span></h1>
 			</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-			<span class="navbar-toggler-icon"></span>
+			<span class="navbar-toggler-icon">
+				<i class="fas fa-bars"></i>
+			</span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
@@ -48,9 +50,9 @@
 	<div class="carousel-inner">
 		<div class="carousel-item active">
 			<img src="img/background.jpg" alt="">
-			<div class="carousel-caption">
-				<h4 class="display-3">Studentka III roku <br> Informatyki Stosowanej na AGH w Krakowie</h4>
-			</div>
+			<!--<div class="carousel-caption">
+				<h3 class="display-3">Studentka III roku <br> Informatyki Stosowanej na AGH w Krakowie</h3>
+			</div>-->
 		</div>
 		<div class="carousel-item">
 			<img src="img/background2.jpg" alt="">
